@@ -18,3 +18,4 @@ suggestions:
   David Patrick
   jonbobbly
   hosaka
+  Lars Kumbier
