@@ -120,6 +120,13 @@ database, and .taskrc file, Tasksh will not find them unless you set the
 TASKDATA and TASKRC environment variables. See 'man taskrc' for more
 details.
 
+The review command storeѕ a UDA ('reviewed') and report definition ('_reviewed').
+
+.TP
+.B tasksh.autoclear=1
+If set to "1", causes each tasksh command to be preceded by a 'clear screen' and
+cursor reset. Default is "0".
+
 .SH "CREDITS & COPYRIGHTS"
 Copyright (C) 2006 \- 2016 P. Beckingham, F. Hernandez.
 
